--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
     .box { background: #fce4e4; border: 1px solid #f44336; padding: 1rem; border-radius: 8px; }
     h1 { color: #f44336; }
+    .logout-btn {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.6rem 1.2rem;
+      background-color: #f44336;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      text-decoration: none;
+      font-size: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -15,12 +26,23 @@
     <p><strong>Error:</strong> <span id="error">Loading...</span></p>
     <p><strong>Details:</strong> <span id="desc">Loading...</span></p>
     <p>If you believe this is a mistake, please contact support.</p>
+    <a id="logoutBtn" class="logout-btn" href="#" style="display:none;">Back to login</a>
   </div>
 
   <script>
     const params = new URLSearchParams(window.location.search);
-    document.getElementById("error").innerText = params.get("error") || "Unknown";
-    document.getElementById("desc").innerText = params.get("error_description") || "No details provided.";
+    const error = params.get("error") || "Unknown";
+    const desc = params.get("error_description") || "No details provided.";
+    const logoutUrl = params.get("logoutUrl");
+
+    document.getElementById("error").innerText = error;
+    document.getElementById("desc").innerText = desc;
+
+    if (logoutUrl) {
+      const btn = document.getElementById("logoutBtn");
+      btn.href = logoutUrl;
+      btn.style.display = 'inline-block';
+    }
   </script>
 </body>
 </html>
