--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Login Failed</h1>
     <p><strong>Error:</strong> <span id="error">Loading...</span></p>
     <p><strong>Details:</strong> <span id="desc">Loading...</span></p>
-    <p>If you believe this is a mistake, please contact support.</p>
+    <p>If you believe this is a mistake, please contact <a href="mailto:support@ingenius-data.com">support@ingenius-data.com</a>.</p>
   </div>
 
   <script>
